# project-amaze

./: .gitignore  Dockerfile  README.md  client.py  models.py  openenv.yaml  requirements.txt
.github/workflows/: deploy.yml
demo/: index.html
frontend/: index.html
frontend/assets/: index-Du05hQkK.js
server/: app.py  rendezvous_environment.py
simulation/: reward_calculator.py  scenario_generator.py
site/: index.html  package-lock.json  package.json  push_to_site.sh  vite.config.js
site/src/: index.css
site/src/components/: Controls.jsx  Header.jsx  ReasoningPanel.jsx
site/temp_sync_repo/: Dockerfile  inference.py  pyproject.toml
site/temp_sync_repo/.github/workflows/: deploy.yml
site/temp_sync_repo/frontend/assets/: index-BI3p_tog.css
site/temp_sync_repo/server/: app.py
site/temp_sync_repo/simulation/: __init__.py  cwh_dynamics.py
site/temp_sync_repo/site/: package.json
site/temp_sync_repo/site/src/: App.jsx  index.css
site/temp_sync_repo/site/src/components/: OrbitalCanvas.jsx  RewardChart.jsx  StatsRow.jsx
site/temp_sync_repo/training/: spacecraft_grpo_math2.ipynb
training/: eval.py  spacecraft_grpo_colab.ipynb  training_logger.py
