[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spacecraft-rendezvous-env"
version = "1.0.0"
description = "Spacecraft Proximity Operations RL Environment — OpenEnv Hackathon 2026"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
server = "server.app:main"
inference = "inference:main"

[tool.setuptools.packages.find]
where = ["."]
